--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,44 @@
-
+html {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  vertical-align: baseline;
+  background: transparent; }
+  html body {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    vertical-align: baseline;
+    background: transparent;
+    background-color: #0f0f10;
+    color: #eaebeb;
+    font-family: 'Lato', sans-serif; }
+    html body nav {
+      background-color: #3e4042; }
+      html body nav h1 {
+        margin-top: 0; }
+    html body main {
+      margin-left: 5%;
+      margin-right: 5%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+      html body main .dayContainer {
+        width: 17%;
+        background-color: #3e4042;
+        display: flex;
+        flex-direction: column;
+        align-items: center; }
+        html body main .dayContainer div {
+          height: 100%;
+          display: flex; }
+          html body main .dayContainer div .maxTemp {
+            margin-right: 10%;
+            color: red; }
+          html body main .dayContainer div .minTemp {
+            margin-left: 10%;
+            color: blue; }
 
 /*# sourceMappingURL=styles.css.map */
