--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ html {
     html body nav {
       background-color: #3e4042; }
       html body nav h1 {
-        margin-top: 0; }
+        margin-top: 0;
+        padding: 1em; }
+    html body h2 {
+      padding-left: 1em; }
     html body main {
       margin-left: 5%;
       margin-right: 5%;
@@ -31,14 +34,14 @@ html {
         display: flex;
         flex-direction: column;
         align-items: center; }
-        html body main .dayContainer div {
+        html body main .dayContainer h4 {
+          margin-top: 0; }
+        html body main .dayContainer .temps {
           height: 100%;
           display: flex; }
-          html body main .dayContainer div .maxTemp {
+          html body main .dayContainer .temps .maxTemp {
             margin-right: 10%;
-            color: red; }
-          html body main .dayContainer div .minTemp {
+            color: #fd9453; }
+          html body main .dayContainer .temps .minTemp {
             margin-left: 10%;
-            color: blue; }
-
-/*# sourceMappingURL=styles.css.map */
+            color: #81ccfe; }
