--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -17,10 +17,14 @@ html {
     nav {
       h1 {
         margin-top: 0;
+        padding: 1em;
       }
       background-color: hsl(207, 3%, 25%);
     }
     font-family: 'Lato', sans-serif;
+    h2 {
+      padding-left: 1em;
+    }
     main {
       margin-left: 5%;
       margin-right: 5%;
@@ -33,16 +37,19 @@ html {
         display: flex;
         flex-direction: column;
         align-items: center;
-        div {
+        h4 {
+          margin-top: 0;
+        }
+        .temps {
           height: 100%;
           display: flex;
           .maxTemp {
             margin-right: 10%;
-            color: red;
+            color: hsl(23, 98%, 66%);;
           }
           .minTemp {
             margin-left: 10%;
-            color: blue;
+            color: hsl(204, 98%, 75%);
           }
         }
       }
