--- a/css/styles.css
+++ b/css/styles.css
@@ -45,3 +45,12 @@ html {
           html body main .dayContainer .temps .minTemp {
             margin-left: 10%;
             color: #81ccfe; }
+    @media (max-width: 800px) {
+      html body main {
+        display: flex;
+        flex-direction: column; }
+        html body main .dayContainer {
+          width: 40%;
+          margin-bottom: 5%; } }
+
+/*# sourceMappingURL=styles.css.map */
