--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -54,5 +54,15 @@ html {
         }
       }
     }
+    @media(max-width: 800px) {
+      main {
+        display: flex;
+        flex-direction: column;
+        .dayContainer {
+          width: 40%;
+          margin-bottom: 5%;
+        }
+      }
+    }
   }
 }
